changed delete button alignement to center

--- a/src/app/components/productcompopnent/product.view.html
+++ b/src/app/components/productcompopnent/product.view.html
@@ -93,7 +93,7 @@
                 <td *ngFor="let h of headers">
                     {{prd[h]}}
                 </td>
-                <td class="text-right"><input type="button" class="btn btn-primary" value="Delete" (click)="deleteProduct(prd)" /></td>
+                <td class="text-center"><input type="button" class="btn btn-primary" value="Delete" (click)="deleteProduct(prd)" /></td>
             </tr>
         </tbody>
     </table>
