--- a/src/app/components/productreactiveformcompopnent/productreactiveform.view.html
+++ b/src/app/components/productreactiveformcompopnent/productreactiveform.view.html
@@ -3,46 +3,36 @@
     <form name="frmprd" [formGroup]='frmPrd' (ngSubmit)="save()">
         <div class="form-group">
             <label>Product Id</label>
-            <input
-                [ngClass]="frmPrd.controls.ProductId.errors != null && frmPrd.controls.ProductId.dirty ? 'invalid-control' : '' "
-                type="number" name="ProductId" formControlName="ProductId" class="form-control">
+            <input type="text" name="ProductId" formControlName="ProductId" class="form-control">
             <div class="alert alert-danger" *ngIf="frmPrd.controls.ProductId.dirty && !frmPrd.controls.ProductId.valid">
                 <p *ngIf="frmPrd.controls.ProductId.errors.required">Product Id is required</p>
                 <p *ngIf="frmPrd.controls.ProductId.errors.minlength">Product Id must be 2 digits minimum</p>
                 <p *ngIf="frmPrd.controls.ProductId.errors.maxlength">Product Id must be 6 digits maximum</p>
                 <p *ngIf="frmPrd.controls.ProductId.errors.pattern">Product Id must be positive integer</p>
                 <p *ngIf="frmPrd.controls.ProductId.errors.noteven">Value must be even number</p>
-                <p *ngIf="frmPrd.controls.ProductId.errors.nonUniProductId">Product Id must be unique</p>
             </div>
         </div>
         <div class="form-group">
             <label>Product Name</label>
-            <input
-                [ngClass]="frmPrd.controls.ProductName.errors  && frmPrd.controls.ProductName.dirty? 'invalid-control' : '' "
-                type="text" name="ProductName" formControlName="ProductName" class="form-control">
-            <div class="alert alert-danger"
-                *ngIf="frmPrd.controls.ProductName.dirty && !frmPrd.controls.ProductName.valid">
-                <p *ngIf="frmPrd.controls.ProductName.errors.pattern">Product Name should start with capital letter and
-                    should not have special characters</p>
-            </div>
+            <input type="text" name="ProductName" formControlName="ProductName" class="form-control">
         </div>
         <div class="form-group">
             <label>Price</label>
-            <input [ngClass]="frmPrd.controls.Price.errors  && frmPrd.controls.Price.dirty? 'invalid-control' : '' "
-                type="text" name="Price" formControlName="Price" class="form-control">
+            <input type="text" name="Price" formControlName="Price" class="form-control">
         </div>
         <div class="form-group">
             <label>Category</label>
-            <app-dropdown-directive [dropdownHeader]="'Select Category'" [MenuSource]="cats" (onOptionSelected)="onCategorySelected($event)"></app-dropdown-directive>
+            <select name="Category" formControlName="Category" class="form-control">
+        <option *ngFor="let c of cats" value="{{c}}">{{c}}</option>
+      </select>
         </div>
         <div class="form-group">
             <!--Event Binding (click)-->
-            <input type="button" value="New" class="btn btn-warning mr-2" (click)="clear()">
+            <input type="button" value="New" class="btn btn-warning" (click)="clear()">
             <input type="submit" [disabled]="!frmPrd.valid" value="Save" class="btn btn-success">
         </div>
     </form>
 </div>
-
 <!--The component subscribe to the event emitted by the child component-->
 <!--The data emitted by the child component will be read using
   the $event object-->
